🐛 fixing mobile overflow

--- a/src/components/Content/styles.module.scss
+++ b/src/components/Content/styles.module.scss
@@ -2,10 +2,22 @@
 
 .container {
   @supports (width: 100dvw) {
-    min-width: calc(100dvw - $aside-width);
-    max-width: calc(100dvw - $aside-width);
+    min-width: 100dvw;
+    max-width: 100dvw;
   }
-  min-width: calc(100vw - $aside-width);
-  max-width: calc(100vw - $aside-width);
-  @apply overflow-x-hidden;
+  min-width: 100vw;
+  max-width: 100vw;
+  @apply overflow-x-hidden
 }
+@media (min-width: 800px) {
+  .container {
+    @supports (width: 100dvw) {
+      min-width: calc(100dvw - $aside-width);
+      max-width: calc(100dvw - $aside-width);
+    }
+    min-width: calc(100vw - $aside-width);
+    max-width: calc(100vw - $aside-width);
+    @apply overflow-x-hidden;
+  }
+}
+
